# NexusAgent

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
nexusagent/: __init__.py  __main__.py  agent.py  cli.py  config.py  context.py  sandbox.py  session.py  utils.py
nexusagent/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
nexusagent/tools/: __init__.py  code_analysis.py  file_ops.py  git_ops.py  registry.py  shell.py  web_search.py
nexusagent/tui/: __init__.py  app.py  chat_view.py  status_bar.py  theme.py
