[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nexusagent"
version = "0.1.0"
description = "Multi-LLM Terminal AI Coding Agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "NexusAgent Team"},
]
keywords = ["ai", "agent", "llm", "coding", "terminal", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Environment :: Console :: Curses",
]

[project.scripts]
nexusagent = "nexusagent.cli:main"

[tool.setuptools.packages.find]
include = ["nexusagent*"]

[tool.setuptools.package-data]
nexusagent = ["**/*.py"]
